--- a/application/modules/default/layouts/scripts/email-staff.phtml
+++ b/application/modules/default/layouts/scripts/email-staff.phtml
@@ -157,54 +157,25 @@ echo $this->doctype();
 						</table>  
 						<table width="600" cellpadding="20" cellspacing="0" class="bodyTable"> 
 							<!-- Content -->
-							<tr> 		 
+							<tr>  
 								<td valign="top" class="defaultText" align="left" style="font-size: 12px;color: #FFFFFF;line-height: 150%;font-family: Helvetica;width: 400px;background-color: #404043;padding: 20px;"><meta charset="utf-8"> 
-									<?php echo $this->layout()->content; ?>										
-								</td> 		 
-								<td valign="top" class="sideColumn" align="left" style="margin: 0px;background-color: #404043;border-left: 1px solid #DDDDDD;text-align: left;width: 200px;padding: 20px;"> 
-									<div class="sideColumnText" style="font-size: 11px;font-weight: normal;color: #FFFFFF;font-family: Helvetica;line-height: 150%;"><div style="text-align: center; "> 
-										<span class="Apple-style-span" style="font-size: 15px; line-height: 22px;"><b>Connect with us online</b></span></div> 
-									<div style="text-align: left; "> 
-										<a href="www.facebook.com/givetowin" style="color: #51AEC9;text-decoration: underline;font-weight: bold;"><img alt="Connect with us on Facebook" border="0" height="32" src="http://gallery.mailchimp.com/60d649b2e466b743ce07d3f63/images/facebook_32.png" width="32"></a>&nbsp; &nbsp;<a href="www.twitter.com/givetowin" style="color: #51AEC9;text-decoration: underline;font-weight: bold;"><img alt="Check us out on Twitter!" border="0" height="32" src="http://gallery.mailchimp.com/60d649b2e466b743ce07d3f63/images/twitter_32.png" width="32"></a></div> 
-									<div style="text-align: center; "> 
-										<br> 
-										<span style="font-family:arial,helvetica,sans-serif;"><span style="font-size:14px;"><strong>Share with your friends</strong></span></span><br> 
-										<span style="font-size:12px;">*|MC:TOPSHARE|*<br> 
-										*|FORWARD|*</span></div> 
-									<br> 
-									<meta charset="utf-8"> 
-									<div style="text-align: center; "> 
-										<strong><span style="font-size:14px;"><span style="font-family:arial,helvetica,sans-serif;">Got any ideas?</span></span></strong></div> 
-									<div style="text-align: center; "> 
-										<span style="font-size:12px;"><span style="font-family:arial,helvetica,sans-serif;"><a href="http://givetowin.org" style="color: #51AEC9;text-decoration: underline;font-weight: bold;"> Suggest a charity<br> 
-										Suggest a business<br> 
-										Suggest a city</a></span></span></div> 
-									</div> 
-								</td> 		 
-							</tr> 		 
+									<?php echo $this->layout()->content; ?>
+								</td> 
+							</tr>  
 							<!-- //Content -->
 							<!-- Footer -->
 							<tr> 
-								<td class="footerRow" valign="top" colspan="2" align="left" style="background-color: #404043;border-top: 0px none #FFFFFF;padding: 20px;"> 														
-									<div class="footerText" style="font-size: 10px;color: #FFFFFF;line-height: 100%;font-family: Helvetica;"> 
-										<br> 
-										<br> 
-										<a href="#" style="color: #FFFFFF;text-decoration: underline;font-weight: normal;">Unsubscribe</a> from this list.<br> 
-										<br> 
-										Our mailing address is:<br>
-										<br> 
-										Copyright (C) All rights reserved.<br> 
-										<br> 
-										<a href="#" style="color: #FFFFFF;text-decoration: underline;font-weight: normal;">Forward</a> this email to a friend<br> 
-										<a href="#" style="color: #FFFFFF;text-decoration: underline;font-weight: normal;">Update your profile</a> 
-										<!-- *|IFNOT:ARCHIVE_PAGE|* --> 
-										Our mailing address is:<br> 
-										*|USER:ADDRESS_HTML|*<br> 
-										<!-- *|END:IF|* --> 
-										Copyright (C) All rights reserved.
-									</div> 
+								<td class="footerRow" valign="top" colspan="2" align="left" style="background-color: #404043;border-top: 0px none #FFFFFF;padding: 20px;"> 
+									<!-- Admin -->		
+									<div class="footerText" style="font-size: 10px;color: #FFFFFF;line-height: 100%;font-family: Helvetica;">
+									<br><br> 
+									Our mailing address is:<br> 
+									<br> 
+									<br> 
+									Copyright (C)  All rights reserved.  </div> 
 									<div id="monkeyRewards" style="margin-top: 10px; text-align: right;"> 
 									</div> 
+									<!-- //Admin -->	
 								</td> 
 							</tr> 
 							<!-- //Footer -->
