Delete User Modal

--- a/application/modules/admin/layouts/scripts/layout.phtml
+++ b/application/modules/admin/layouts/scripts/layout.phtml
@@ -14,7 +14,7 @@ $this->headScript()->prependFile(
     array('conditional' => 'lt IE 8')
 );
 
-$this->headScript()->prependFile('/skins/admin/assets/js/mini.php?files=html5,jquery-1.4.2.min,common,standard,jquery.tip.js,list');
+$this->headScript()->prependFile('/skins/admin/assets/js/mini.php?files=html5,jquery-1.4.2.min,common,standard,jquery.tip.js,list,jquery.modal');
 
 
 //Default Styles/Icons
