--- a/application/modules/admin/views/scripts/users/browse.phtml
+++ b/application/modules/admin/views/scripts/users/browse.phtml
@@ -1,20 +1,3 @@
-<script type="text/javascript" src="/skins/admin/assets/js/jquery-1.4.2.min.js"></script>
-<script type="text/javascript" src="/skins/admin/assets/js/jquery.modal.js"></script>
-<script type="text/javascript">
-		alert("kjasdjasd");
-	function openModalDelete()
-	{
-		$.modal({
-			content: '<p>Yes, Permanently delete user. <br> No, don't delete user.</p>',
-			title: 'Are you sure you want to delete this user?',
-			maxWidth: 500,
-			buttons: {
-				'Yes': function(win) { openModalDelete(); },
-				'No': function(win) { win.closeModal(); }
-			}
-		});
-	}
-</script>
 <?php
 	$this->category = 'users';
 	$this->page = 'browse';
@@ -24,6 +7,27 @@
 	array('title'=>'Browse', 'url'=>'/admin/users/browse')
 	);
 ?>
+
+<?php $this->headScript()->captureStart() ?>
+	function openModalDelete(id)
+	{
+		console.log(id);
+		$.modal({
+			content: '<p>This user, all there subscriptions, coupons, comments will be deleted.</p>'+
+				  '<p>The plugin provides several other functions to control them, try below:</p>'+
+				  '<ul class="simple-list with-icon">'+
+				  '    <li><a href="/admin/users/delete-user/id/'+id+'">Yes, Permanently Delete User</a></li>'+
+				  '</ul>',
+			title: 'Are you sure you want to delete this user?',
+			maxWidth: 500,
+			buttons: {
+				'Close': function(win) { win.closeModal(); }
+			}
+
+		});
+	}
+<?php $this->headScript()->captureEnd() ?>
+
 		<section class="grid_12">
 			<div class="block-border"><form class="block-content form" id="table_form" method="post" action="">
 				<h1>Users</h1>
@@ -59,7 +63,7 @@
 							<td><?=$user->status->status;?></td>
 							<td class="table-actions">
 								<a href="/admin/users/edit/id/<?=$user->id;?>" title="Edit" class="with-tip"><img src="/skins/admin/assets/img/icons/fugue/user-edit.png" width="16" height="16"></a>
-								<a href="javascript:void(0);" onClick="openModalDelete(); return false;" title="Delete" class="with-tip"><img src="/skins/admin/assets/img/icons/fugue/user-delete.png" width="16" height="16"></a>
+								<a href="#" onClick="openModalDelete(<?=$user->id;?>);" title="Delete" class="with-tip"><img src="/skins/admin/assets/img/icons/fugue/user-delete.png" width="16" height="16"></a>
 							</td>
 						</tr>
 						<? endforeach; ?>						
