--- a/application/modules/default/views/scripts/index/new-visitor.phtml
+++ b/application/modules/default/views/scripts/index/new-visitor.phtml
@@ -75,9 +75,9 @@ $this->headTitle('Welcome - ', 'PREPEND');
 								<center>
 								<table>
 									<tr valign="top">
-										<td><a href="/User/Login#mb_login" rell="lightbox[login 640 270]" >Sign In</a></td>
+										<td><a href="/Auth/Login#mb_login">Sign In</a></td>
 										<td>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;</td>
-										<td><a href="/User/Register#mb_register" rell="lightbox[register 640 515]" >Register</a></td>
+										<td><a href="/User/Register#mb_register">Register</a></td>
 										<td>&nbsp;&nbsp;&nbsp;Or&nbsp;&nbsp;</td>
 										<td>
 											<a href="#facebookLogin!" onclick="loginWithFacebook()">
