--- a/application/modules/default/layouts/scripts/layout.phtml
+++ b/application/modules/default/layouts/scripts/layout.phtml
@@ -106,7 +106,7 @@ echo $this->doctype();
 											</td>
 											<td class="vr"></td>
 											<td>
-												<a href="/Index/How-It-Works">HOW IT WORKS</a>
+												<a href="/Info/How-It-Works">HOW IT WORKS</a>
 											</td>
 											<td class="vr"></td>
 											<td class="coming_soon">
