--- a/application/modules/default/views/scripts/info/how-it-works.phtml
+++ b/application/modules/default/views/scripts/info/how-it-works.phtml
@@ -1,4 +1,41 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Info</b> and script/action name <b>howItWorks</b></p>
+<?php
+$this->headTitle('How It Works');
+?>
+
+
+
+<div class="content-box" style="width:740px;">
+	<table width="100%" cellpadding="0" cellspacing="0" border="0">
+		<tr class="header">
+			<td class="left"></td>
+			<td class="center" width="802"></td>
+			<td class="right"></td>
+		</tr>
+		<tr>
+			<td class="title" colspan="3" style="padding:20px;">
+				<h1>How It Works</h1>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="3" class="body" style="
+          padding-top:20px;
+          padding-bottom:40px;
+          padding-left:80px;
+          padding-right:80px;
+          text-align: left;">
+
+				<h3>Get It</h3><hr style='border:1px dotted;' /><br />
+Receive updates on fundraising goals and great discounts in your town.<br /><br /><br />
+        <h3>Give It</h3><hr style='border:1px dotted;' /><br />
+Donate to a charitable cause near you and great local businesses will offer you a discount if the goal is met.<br /><br /><br />
+        <h3>Share It</h3><hr style='border:1px dotted;' /><br />
+Spread the love and tell your friends to join in.  When the goal is reached, your coupon is activated.<br /><br /><br />
+        <h3>Win It</h3><hr style='border:1px dotted;' /><br />
+Receive a voucher in your inbox and take it to the business to get your reward.  Enjoy your savings and your karma boost.
+
+
+
+			</td>
+		</tr>
+	</table>
 </div>
