Added fundraisers/offers to menu

--- a/application/modules/admin/layouts/scripts/layout.phtml
+++ b/application/modules/admin/layouts/scripts/layout.phtml
@@ -110,6 +110,18 @@ $user = GTW_Service_User::getInstance()->getCurrentUser();
 										<li class="icon_search"><a href="/admin/email/browse-templates">Templates</a></li>
 									</ul>
 								</li>
+								<li class="icon_address"><a href="#">Fundraisers</a>
+									<ul>
+										<li class="icon_edit"><a href="/admin/fundraisers/create">Create Fundraiser</a></li>
+										<li class="icon_search"><a href="/admin/fundraisers/browse">Browse Fundraisers</a></li>
+									</ul>
+								</li>
+								<li class="icon_address"><a href="#">Offers</a>
+									<ul>
+										<li class="icon_edit"><a href="/admin/offers/create">Create Offer</a></li>
+										<li class="icon_search"><a href="/admin/offers/browse">Browse Offers</a></li>
+									</ul>
+								</li>
 								<li class="icon_address"><a href="#">Users</a>
 									<ul>
 										<li class="icon_search"><a href="/admin/users/browse">Browse Users</a></li>
