Admin: Login, Logout, Delete(s)

--- a/application/modules/admin/views/scripts/charities/browse.phtml
+++ b/application/modules/admin/views/scripts/charities/browse.phtml
@@ -49,7 +49,7 @@ HTML;
 								</td>
 								<td class="table-actions">
 									<a href="/admin/charities/edit/id/<?=$charity->id;?>" title="Edit Charity" class="with-tip"><img src="/skins/admin/assets/img/icons/fugue/pencil.png" width="16" height="16"></a>
-									<a href="#" onClick="openDeleteCharityPrompt(<?=$fundraiser->id;?>);" title="Delete Charity" class="with-tip"><img src="/skins/admin/assets/img/icons/fugue/cross-circle.png" width="16" height="16"></a>
+									<a href="#" onClick="openDeleteCharityPrompt(<?=$charity->id;?>);" title="Delete Charity" class="with-tip"><img src="/skins/admin/assets/img/icons/fugue/cross-circle.png" width="16" height="16"></a>
 								</td>
 							</tr>
 						<? endforeach; ?>						
