--- a/application/modules/admin/views/scripts/companies/edit.phtml
+++ b/application/modules/admin/views/scripts/companies/edit.phtml
@@ -52,7 +52,7 @@ HTML;
 					</a>
 				</li>
 				<li>
-					<a href="#" onClick="openDeleteUserPrompt(<?=$this->company->id;?>);" title="Delete Company">
+					<a href="#" onClick="openDeleteCompanyPrompt(<?=$this->company->id;?>);" title="Delete Company">
 						<img src="/skins/admin/assets/img/icons/web-app/24/Delete.png" width="24" height="24"/>
 					</a>
 				</li>
