--- a/application/modules/admin/views/scripts/fundraisers/edit.phtml
+++ b/application/modules/admin/views/scripts/fundraisers/edit.phtml
@@ -86,7 +86,7 @@ HTML;
 					</a>
 				</li>
 				<li>
-					<a href="#" onClick="openDeleteUserPrompt(<?=$this->fundraiser->id;?>);" title="Delete Fundraiser">
+					<a href="#" onClick="openDeleteFundraiserPrompt(<?=$this->fundraiser->id;?>);" title="Delete Fundraiser">
 						<img src="/skins/admin/assets/img/icons/web-app/24/Delete.png" width="24" height="24"/>
 					</a>
 				</li>
