--- a/application/modules/admin/views/scripts/auth/login.phtml
+++ b/application/modules/admin/views/scripts/auth/login.phtml
@@ -24,11 +24,11 @@ $this->headScript()->appendFile('/skins/admin/assets/js/gtw/login.js');
 				<input type="hidden" name="a" id="a" value="send">
 				<p class="inline-small-label">
 					<label for="login"><span class="big">Email</span></label>
-					<input type="text" name="login" id="login" class="full-width" value="sean@skyseek.com">
+					<input type="text" name="login" id="login" class="full-width" value="">
 				</p>
 				<p class="inline-small-label">
 					<label for="pass"><span class="big">Password</span></label>
-					<input type="password" name="pass" id="pass" class="full-width" value="blackdog">
+					<input type="password" name="pass" id="pass" class="full-width" value="">
 				</p>
 
 				<button type="submit" class="float-right">Login</button>
