--- a/application/modules/admin/views/scripts/charities/edit.phtml
+++ b/application/modules/admin/views/scripts/charities/edit.phtml
@@ -47,12 +47,12 @@ HTML;
 		<div class="block-controls">
 			<ul class="controls-tabs js-tabs">
 				<li class="current">
-					<a href="#" title="User Settings">
+					<a href="#" title="Charity Settings">
 						<img src="/skins/admin/assets/img/icons/web-app/24/Info.png" width="24" height="24"/>
 					</a>
 				</li>
 				<li>
-					<a href="#" onClick="openDeleteUserPrompt(<?=$this->charity->id;?>);" title="Delete Charity">
+					<a href="#" onClick="openDeleteCharityPrompt(<?=$this->charity->id;?>);" title="Delete Charity">
 						<img src="/skins/admin/assets/img/icons/web-app/24/Delete.png" width="24" height="24"/>
 					</a>
 				</li>
