--- a/application/modules/admin/views/scripts/companies/browse.phtml
+++ b/application/modules/admin/views/scripts/companies/browse.phtml
@@ -49,7 +49,7 @@ HTML;
 							</td>
 							<td class="table-actions">
 								<a href="/admin/companies/edit/id/<?=$company->id;?>" title="Edit Company" class="with-tip"><img src="/skins/admin/assets/img/icons/fugue/pencil.png" width="16" height="16"></a>
-								<a href="#" onClick="openDeleteCompanyPrompt(<?=$user->id;?>);" title="Delete Company" class="with-tip"><img src="/skins/admin/assets/img/icons/fugue/cross-circle.png" width="16" height="16"></a>
+								<a href="#" onClick="openDeleteCompanyPrompt(<?=$company->id;?>);" title="Delete Company" class="with-tip"><img src="/skins/admin/assets/img/icons/fugue/cross-circle.png" width="16" height="16"></a>
 							</td>
 						</tr>
 						<? endforeach; ?>						
