--- a/application/modules/admin/views/scripts/offers/edit.phtml
+++ b/application/modules/admin/views/scripts/offers/edit.phtml
@@ -86,7 +86,7 @@ HTML;
 					</a>
 				</li>
 				<li>
-					<a href="#" onClick="openDeleteUserPrompt(<?=$this->offer->id;?>);" title="Delete Offer">
+					<a href="#" onClick="openDeleteOfferPrompt(<?=$this->offer->id;?>);" title="Delete Offer">
 						<img src="/skins/admin/assets/img/icons/web-app/24/Delete.png" width="24" height="24"/>
 					</a>
 				</li>
