--- a/application/modules/default/layouts/scripts/email.phtml
+++ b/application/modules/default/layouts/scripts/email.phtml
@@ -161,8 +161,7 @@ echo $this->doctype();
 									<div style="text-align: center; "> 
 										<br> 
 										<span style="font-family:arial,helvetica,sans-serif;"><span style="font-size:14px;"><strong>Share with your friends</strong></span></span><br> 
-										<span style="font-size:12px;">*|MC:TOPSHARE|*<br> 
-										*|FORWARD|*</span></div> 
+										<span style="font-size:12px;"><br></span></div>
 									<br> 
 									<meta charset="utf-8"> 
 									<div style="text-align: center; "> 
